# kitt

./: .gitattributes  .gitignore  .pylintrc  LICENSE.txt  README.md  apis.py  car_assistant.ipynb  car_assistant_eta.ipynb  car_assistant_slim.ipynb  car_assistant_text.ipynb  kitt.py  llama2.py  llama2_writtenInterface.ipynb  main.py  pyproject.toml  requirements.txt  space.py  stt.ipynb  stttotts.py  test_raven.ipynb  tts.ipynb
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  setup.sh
core/: __init__.py
kitt/: keepalive.py
kitt/core/: __init__.py  legacy.py  model.py  stt.py  tts.py  utils.py  validator.py
kitt/skills/: __init__.py  common.py  interpreter.py  poi.py  routing.py  vehicle.py  weather.py
notebooks/: measurements.ipynb
skills/: __init__.py  common.py  poi.py  routing.py  vehicle.py  weather.py
